objects/LLC_BI__Onboarding__c.object
<CustomObject>
    <description>This object represents the ability to onboard entities and maintain compliance throughout the lifecycle of the loan.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Reference to the Account that is associated with the onboarding case.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Onboarding Cases</relationshipLabel>
        <relationshipName>Onboarding</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Closure_Reason__c</fullName>
        <description>The reason the onboarding case is closed. The user can add a detailed description to support the status change.</description>
        <label>Closure Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Complete_DateTime__c</fullName>
        <description>The date/time the case was closed.</description>
        <label>Complete Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Parent_Onboarding_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the primary onboarding case that resulted in this additional onboarding case being created.</description>
        <label>Parent Onboarding Case</label>
        <referenceTo>LLC_BI__Onboarding__c</referenceTo>
        <relationshipName>Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference of the Product Line being applied for (if applicable)</description>
        <label>Product Line</label>
        <referenceTo>LLC_BI__Product_Line__c</referenceTo>
        <relationshipLabel>Onboarding Cases</relationshipLabel>
        <relationshipName>Onboarding_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the associated product package (if applicable).</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Onboarding Cases</relationshipLabel>
        <relationshipName>Onboarding_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage__c</fullName>
        <description>This picklist field indicates progress of the case through the onboarding process. The workflow automatically populates it, or a user can manually set it.</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CustomerEngagement</fullName>
                    <default>true</default>
                    <label>Customer Engagement</label>
                </value>
                <value>
                    <fullName>DueDiligence</fullName>
                    <label>Due Diligence</label>
                </value>
                <value>
                    <fullName>Validation</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Started_DateTime__c</fullName>
        <description>The date/time the case was moved into progress.</description>
        <label>Started Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This picklist field contains the state of an onboarding case. The workflow automatically populates it, or a user can manually set it.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>Onboarding journey type</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NewCustomer</fullName>
                    <label>New Customer</label>
                </value>
                <value>
                    <fullName>NewProduct</fullName>
                    <label>New Product</label>
                </value>
                <value>
                    <fullName>KybAndKycOnly</fullName>
                    <label>KYB/KYC Only</label>
                </value>
                <value>
                    <fullName>RiskAssessmentOnly</fullName>
                    <label>Risk Assessment Only</label>
                </value>
                <value>
                    <fullName>AmendMandate</fullName>
                    <label>Amend Mandate</label>
                </value>
                <value>
                    <fullName>SmallBusiness</fullName>
                    <label>Small Business</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The reference number associated with the onboarding case, case number.</description>
        <externalId>true</externalId>
        <label>Lookup</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Onboarding Case</label>
    <nameField>
        <displayFormat>ON-{00000}</displayFormat>
        <label>Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>